test_regress/t/t_preproc_inc_recurse_bad.out
%Error: t/t_preproc_inc_recurse_bad.v:6:10: Recursive inclusion of file: t/t_preproc_inc_recurse_bad.v
`include "t_preproc_inc_recurse_bad.v"
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
%Error: Exiting due to
